--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meet our team!</title>   
+    <title>Testimonials</title>   
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,7 +19,7 @@
   </head>
   <body class="screen">
     <div>
-      <h1 class="title">Meet our team...</h1>
+      <h1 class="title">Student Testimonials..</h1>
     </div>
 
     <div class="cards">
